--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+      "zustand": "^4.5.2",
+      "zod": "^3.22.4"
+
+
   },
   "devDependencies": {
     "@types/node": "^20.14.1",
